--- a/baleen-xml-server/pom.xml
+++ b/baleen-xml-server/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>baleen-server</artifactId>
+    <artifactId>baleen-xml-server</artifactId>
     <packaging>jar</packaging>
     <name>Niord-Base S-124 Library</name>
 
