Fixing build issues

--- a/baleen-server/src/main/resources/application.properties
+++ b/baleen-server/src/main/resources/application.properties
@@ -5,3 +5,6 @@ quarkus.datasource.devservices.image-name=postgis/postgis:14-3.4
 
 #quarkus.datasource.driver=org.postgresql.Driver
 #quarkus.hibernate-orm.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+
+
+quarkus.arc.exclude-types=org.grad.secom.core.components.SecomExceptionMapper
