--- a/modules/baleen-app/pom.xml
+++ b/modules/baleen-app/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>baleen-connector-secom</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>baleen-connector-web</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -64,7 +69,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        
+        <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
                 <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
