--- a/modules/baleen-app/src/main/resources/application.properties
+++ b/modules/baleen-app/src/main/resources/application.properties
@@ -7,8 +7,11 @@ secom.service-registry.url=https://msr.maritimeconnectivity.net/api/secom
 secom.security.ssl.keystore=secom/mcp-baleen-test-keystore.p12
 secom.security.ssl.keystore-type=jks
 secom.security.ssl.keystore-password=ouXTFHx6apZUk1
-secom.security.ssl.truststore=secom/mcp-truststore.jks
-secom.security.ssl.truststore-type=jks
+#secom.security.ssl.truststore=secom/mcp-truststore.jks
+#secom.security.ssl.truststore-type=jks
+
+secom.security.ssl.truststore=secom/truststore.p12
+secom.security.ssl.truststore-type=PKCS12
 secom.security.ssl.truststore-password=changeit
 secom.security.ssl.insecureSslPolicy=true
 
@@ -25,7 +28,6 @@ management.info.env.enabled=true
 management.endpoint.health.probes.enabled=true
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
-
 
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
