--- a/support/xml-bindings/java/s-124/pom.xml
+++ b/support/xml-bindings/java/s-124/pom.xml
@@ -17,5 +17,6 @@
     <modules>
         <module>1.0.0</module>
         <module>2.0.0</module>
+        <module>2.0.0.1</module>
     </modules>
 </project>
