--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,6 +13,16 @@ jobs:
       DOCKER_IMAGE: ${{ format('{0}/baleen', vars.DOCKER_HUB_USERNAME) }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up Java 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+
       - uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub (only on pushes)
