--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ generated
 .lucene/
 
 copyfrom
+
+# Angular Frontend
+src/main/frontend/node_modules/
+src/main/frontend/.angular/
+src/main/frontend/dist/
+src/main/frontend/*.log
