--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # SECOM Configuration
 secom.security.ssl.keystore=secom/keystore.p12
 secom.security.ssl.keystore-type=PKCS12
-secom.security.ssl.keystore-password=changeit
+secom.security.ssl.keystore-password=${KEYSTORE_PASSWORD:changeit} 
 
 secom.security.ssl.truststore=secom/truststore.p12
 secom.security.ssl.truststore-type=PKCS12
@@ -41,7 +41,7 @@ secom.security.ssl.truststore-password=changeit
 secom.security.ssl.insecureSslPolicy=false
 
 # Service Registry Configuration
-secom.service-registry.url=https://msr.maritimeconnectivity.net/api/secom
+secom.service-registry.url=${SERVICE_REGISTRY_ENDPOINT:https://msr.maritimeconnectivity.net/api/secom} 
 
 # Niord Configuration
 niord.endpoint=${NIORD_ENDPOINT:https://niord.t-dma.dk}
