--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,9 +31,9 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # SECOM Configuration
-secom.security.ssl.keystore=secom/keystore.p12
+secom.security.ssl.keystore=${KEYSTORE_LOCATION:classpath:secom/keystore.p12}
 secom.security.ssl.keystore-type=PKCS12
-secom.security.ssl.keystore-password=${KEYSTORE_PASSWORD:changeit} 
+secom.security.ssl.keystore-password=${KEYSTORE_PASSWORD:changeit}
 
 secom.security.ssl.truststore=secom/truststore.p12
 secom.security.ssl.truststore-type=PKCS12
