--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.sql.init.platform=${DATABASE_TYPE:h2}
 server.port=${SERVER_PORT:8080}
 
 # Enable SQL logging (optional)
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # SECOM Configuration
 secom.security.ssl.keystore=${KEYSTORE_LOCATION:classpath:secom/keystore.p12}
