--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Configuration - defaults to H2, configurable via environment variables
-spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:baleen;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE}
+spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:baleen;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE}
 spring.datasource.driver-class-name=${DATABASE_DRIVER:org.h2.Driver}
 spring.datasource.username=${DATABASE_USERNAME:sa}
 spring.datasource.password=${DATABASE_PASSWORD:}
