--- a/src/main/resources/db/changelog/changes/003-create-secom-core-tables.yaml
+++ b/src/main/resources/db/changelog/changes/003-create-secom-core-tables.yaml
@@ -117,7 +117,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: data
-                  type: CLOB
+                  type: clob
               - column:
                   name: expires_at
                   type: TIMESTAMP
@@ -176,7 +176,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
               - column:
                   name: original_wkt
-                  type: CLOB
+                  type: clob
               - column:
                   name: product_version
                   type: VARCHAR(255)
