--- a/src/main/resources/db/changelog/changes/004-create-publication-tables.yaml
+++ b/src/main/resources/db/changelog/changes/004-create-publication-tables.yaml
@@ -17,7 +17,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: envelope_upload_object
-                  type: LONGVARBINARY
+                  type: blob
                   constraints:
                     nullable: false
               - column:
