--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -8,7 +8,7 @@
 # mvn liquibase:rollback -Dliquibase.rollbackCount=1  - Rollback last change
 
 # Database connection (matches your dev environment)
-url=jdbc:h2:file:./target/baleen-dev;MODE=PostgreSQL;AUTO_SERVER=TRUE
+url=jdbc:h2:file:./target/baleen-dev;AUTO_SERVER=TRUE
 driver=org.h2.Driver
 username=sa
 password=
