--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,4 +1,10 @@
 databaseChangeLog:
+  # Database-specific type properties for cross-database compatibility
+  - property: { name: clob.type, value: clob, dbms: h2 }
+  - property: { name: clob.type, value: oid,  dbms: postgresql }
+  - property: { name: blob.type, value: blob, dbms: h2 }
+  - property: { name: blob.type, value: oid,  dbms: postgresql }
+
   - include:
       file: db/changelog/changes/001-create-spatial-extensions.yaml
   - include:
